# code-snippets

./: .gitignore  README.md
.github/: dependabot.yaml
go-gin/: README.md  go.mod  go.sum  main.go
java-javalin/: .editorconfig  .gitignore  README.md  settings.gradle.kts
java-test-restassured/: build.gradle  settings.gradle
javascript/: .eslintrc.js  .mocharc.js  README.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
javascript-db-client/: .eslintrc.js  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
python/: .pylintrc  README.md  pyproject.toml
python-test/: .pylintrc  README.md  base_selenium_browser.py  base_selenium_element.py  base_selenium_test.py  base_service.py  config.py  pyproject.toml
python-test/enums/: http_enums.py
python-test/pages/sauce_demo/: header_elements.py  header_page.py  home_elements.py  home_page.py  inventory_elements.py  inventory_page.py  shopping_cart_elements.py  shopping_cart_page.py
python-test/services/blog_posts/: blog_posts_service.py
python-test/services/utils/: http_assertion_utils.py  json_utils.py
python-test/test/api/: add_update_test.py  delete_test.py  get_test.py
python-test/test/ui/sauce_demo/: sauce_demo_test.py
python/files/: properties.csv  properties.json
python/src/: if_none.py  if_not_all.py  lambda_anonymous_functions.py  list_dictionary_find_match.py  next_function.py  play.py  string_multi_line.py
python/tests/: test_sample.py
react-select-component/: .eslintrc.cjs  package-lock.json  package.json
(+275 files in other folders)
