[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
arrow = "^1.3.0"
datetime = "^5.3"
requests = "^2.31.0"
pytest-html = "^4.1.1"
pytest-instafail = "^0.5.0"
pytest-rerunfailures = "^12.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.4.0"
selenium = "^4.15.2"
pytest = "^7.4.3"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
