[tool.poetry]
name = "code-snippets-python"
version = "0.1.0"
description = "Snippets and examples"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
arrow = "^1.3.0"
pdfquery = "^0.4.3"
pypdf2 = "^3.0.1"
pytz = "^2023.3.post1"
pandas = "^2.1.2"
requests = "^2.31.0"
pycodestyle = "^2.11.1"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
